--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@portone/browser-sdk": "^0.0.3",
     "axios": "^1.6.5",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.14.2",
